--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
         "@popperjs/core": "^2.11.8",
+        "@swup/debug-plugin": "^1.0||^2.0||^3.0",
+        "@swup/fade-theme": "^1.0",
+        "@swup/forms-plugin": "^1.0||^2.0",
+        "@swup/slide-theme": "^1.0",
+        "@symfony/ux-swup": "file:vendor/symfony/ux-swup/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "bootstrap": "^5.3.0",
         "core-js": "^3.23.0",
@@ -10,6 +15,7 @@
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.62.1",
         "sass-loader": "^13.3.1",
+        "swup": "^2.0||^3.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
